style: restyle with prettier

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,9 +1,21 @@
 ---
+
 ---
 
-<nav id="header" class="sticky top-0 z-1000 bg-[#212121] backdrop-blur-[10px] border-b border-white/10 px-8 py-4">
-  <div class="max-w-7xl mx-auto flex items-center">
-    <img src="/icon.svg" alt="TerraNova Logo" class="h-8 w-8 mr-4 self-center">
-    <h1 class="text-white text-lg font-semibold m-0 tracking-wide hidden md:block">TerraNova: Minecraft Addon Wiki</h1>
+<nav
+  id="header"
+  class="sticky top-0 z-1000 border-b border-white/10 bg-[#212121] px-8 py-4 backdrop-blur-[10px]"
+>
+  <div class="mx-auto flex max-w-7xl items-center">
+    <img
+      src="/icon.svg"
+      alt="TerraNova Logo"
+      class="mr-4 h-8 w-8 self-center"
+    />
+    <h1
+      class="m-0 hidden text-lg font-semibold tracking-wide text-white md:block"
+    >
+      TerraNova: Minecraft Addon Wiki
+    </h1>
   </div>
 </nav>
