--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,opsz,wght@0,18..144,300..900;1,18..144,300..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Merriweather:ital,opsz,wght@0,18..144,300..900;1,18..144,300..900&display=swap");
 @import "tailwindcss";
 
 .merriweather-light {
@@ -66,8 +66,8 @@
 }
 
 #hero {
-    background-image: url('/banner.png');
-    background-size: cover;
-    background-position: center;
-    height: 24rem;
+  background-image: url("/banner.png");
+  background-size: cover;
+  background-position: center;
+  height: 24rem;
 }
