--- a/src/layout/main.astro
+++ b/src/layout/main.astro
@@ -14,7 +14,7 @@ const { content } = Astro.props;
     <meta name="color" content="#D1CEA1" />
   </head>
   <body
-    class="light merriweather-regular min-h-screen bg-[#F5EEDD] text-[#212121]"
+    class="light merriweather-regular flex min-h-screen flex-col bg-[#F5EEDD] text-[#212121]"
   >
     <slot />
   </body>
