--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,12 @@
 ---
 import Layout from "../layout/main.astro";
 import Navbar from "../components/Navbar.astro";
+import { Image } from "astro:assets";
+import titleImage from "../assets/title.png";
+import mobsIcon from "../assets/mobsIcon.png";
+import { YouTube } from "@astro-community/astro-embed-youtube";
+import Footer from "../components/Footer.astro";
+import ImageGrid from "../components/ImageGrid.astro";
 ---
 
 <Layout
@@ -14,10 +20,11 @@ import Navbar from "../components/Navbar.astro";
     <div
       class="mx-auto flex max-w-full flex-col px-4 py-12 text-center md:items-center md:justify-center"
     >
-      <img
-        src="/title.png"
+      <Image
+        src={titleImage}
         alt="TerraNova Logo"
         class="h-auto w-full max-w-6xl"
+        loading={"eager"}
       />
       <div class="mt-8 w-full bg-[#212121]/60 py-6 md:hidden">
         <p
@@ -30,17 +37,19 @@ import Navbar from "../components/Navbar.astro";
       </div>
     </div>
   </header>
-  <main class="mx-auto max-w-3xl px-4 py-8">
+  <main class="mx-auto max-w-4xl px-4 py-8">
     <h2 class="mb-4 text-3xl font-bold">
       Welcome to the TerraNova: Minecraft Addon Wiki
     </h2>
-    <p class="mb-4">
+    <p class="mb-6">
       This wiki is dedicated to providing comprehensive information about the
       TerraNova Minecraft addon. Here, you will find detailed documentation,
       guides, and resources to help you navigate and make the most of the
       TerraNova addon.
     </p>
-    <h3 class="mb-3 text-2xl font-semibold">Getting Started</h3>
+    <h3 class="mb-4 text-2xl font-semibold">Watch the Trailer:</h3>
+    <YouTube id="NOET31wqGkg" playlabel="Play the trailer" />
+    <h3 class="mt-3 mb-3 text-2xl font-semibold">Getting Started</h3>
     <p class="mb-4">
       If you're new to TerraNova, we recommend starting with our <a
         href="/getting-started"
@@ -53,5 +62,18 @@ import Navbar from "../components/Navbar.astro";
       Browse through our various sections to learn more about the features and
       content of TerraNova:
     </p>
+    <ImageGrid
+      columns={{ base: 1, md: 2, lg: 4 }}
+      items={[
+        {
+          src: mobsIcon.src,
+          alt: "Mobs",
+          title: "Mobs",
+          description: "Learn about the various mobs introduced in TerraNova.",
+          href: "/mobs",
+        },
+      ]}
+    />
   </main>
+  <Footer />
 </Layout>
