--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -67,6 +67,7 @@
 
 #hero {
   background-image: url("/banner.png");
+  background-color: #212121;
   background-size: cover;
   background-position: center;
   height: 24rem;
