--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,5 +1,5 @@
 ---
-
+const baseUrl = import.meta.env.BASE_URL;
 ---
 
 <nav
@@ -8,7 +8,7 @@
 >
   <div class="mx-auto flex max-w-7xl items-center">
     <img
-      src="/icon.svg"
+      src={baseUrl + "icon.svg"}
       alt="TerraNova Logo"
       class="mr-4 h-8 w-8 self-center"
     />
