--- a/src/layout/main.astro
+++ b/src/layout/main.astro
@@ -1,5 +1,6 @@
 ---
 import "../styles/global.css";
+const baseUrl = import.meta.env.BASE_URL;
 const { content } = Astro.props;
 ---
 
@@ -7,11 +8,12 @@ const { content } = Astro.props;
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href={baseUrl + "favicon.svg"} />
     <title>{content.title}</title>
     <meta name="description" content={content.description} />
     <meta name="generator" content={Astro.generator} />
     <meta name="color" content="#D1CEA1" />
+    <style define:vars={{ "base-url": `"${baseUrl.slice(0, -1)}"` }} />
   </head>
   <body
     class="light merriweather-regular flex min-h-screen flex-col bg-[#F5EEDD] text-[#212121]"
