--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,6 +7,7 @@ import mobsIcon from "../assets/mobsIcon.png";
 import { YouTube } from "@astro-community/astro-embed-youtube";
 import Footer from "../components/Footer.astro";
 import ImageGrid from "../components/ImageGrid.astro";
+const baseUrl = import.meta.env.BASE_URL;
 ---
 
 <Layout
@@ -70,7 +71,7 @@ import ImageGrid from "../components/ImageGrid.astro";
           alt: "Mobs",
           title: "Mobs",
           description: "Learn about the various mobs introduced in TerraNova.",
-          href: "/mobs",
+          href: `${baseUrl}mobs`,
         },
       ]}
     />
