--- a/src/pages/mobs/deer.astro
+++ b/src/pages/mobs/deer.astro
@@ -10,6 +10,7 @@ import { Image } from "astro:assets";
 import ImageCarousel from "../../components/ImageCarousel.astro";
 import Footer from "../../components/Footer.astro";
 
+const baseUrl = import.meta.env.BASE_URL;
 ---
 
 <Layout
