--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -66,7 +66,7 @@
 }
 
 #hero {
-  background-image: url("/banner.png");
+  background-image: url(var(--base-url)/banner.png);
   background-color: #212121;
   background-size: cover;
   background-position: center;
