fix: correct color meta tag format in main layout

--- a/src/layout/main.astro
+++ b/src/layout/main.astro
@@ -12,7 +12,7 @@ const { content } = Astro.props;
     <title>{content.title}</title>
     <meta name="description" content={content.description} />
     <meta name="generator" content={Astro.generator} />
-    <meta name="color" content="#D1CEA1" />
+    <meta name="color" content="D1CEA1" />
     <style define:vars={{ "base-url": `"${baseUrl.slice(0, -1)}"` }} />
   </head>
   <body
