--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -53,7 +53,7 @@ const baseUrl = import.meta.env.BASE_URL;
     <h3 class="mt-3 mb-3 text-2xl font-semibold">Getting Started</h3>
     <p class="mb-4">
       If you're new to TerraNova, we recommend starting with our <a
-        href="/getting-started"
+        href={`${baseUrl}getting-started`}
         class="text-blue-500 underline">Getting Started guide</a
       >. This guide will walk you through the basics of installing and using the
       addon.
