--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -71,7 +71,7 @@ const baseUrl = import.meta.env.BASE_URL;
           alt: "Mobs",
           title: "Mobs",
           description: "Learn about the various mobs introduced in TerraNova.",
-          href: `${baseUrl}mobs`,
+          href: `${baseUrl}/mobs`,
         },
       ]}
     />
