--- a/src/layout/wiki.astro
+++ b/src/layout/wiki.astro
@@ -13,7 +13,11 @@ const { content } = Astro.props;
     <title>{content.title}</title>
     <meta name="description" content={content.description} />
     <meta name="generator" content={Astro.generator} />
-    <meta name="color" content="D1CEA1" />
+    <meta name="theme-color" content="#D1CEA1" />
+    <meta name="og:title" content={content.title} />
+    <meta name="og:description" content={content.description} />
+    <meta name="og:type" content="website" />
+    <meta name="og:image" content={baseUrl + "icon.svg"} />
     <style define:vars={{ "base-url": `"${baseUrl.slice(0, -1)}"` }} />
   </head>
   <body
