fix: update Open Graph image meta tag to use PNG format

--- a/src/layout/wiki.astro
+++ b/src/layout/wiki.astro
@@ -17,7 +17,7 @@ const { content } = Astro.props;
     <meta name="og:title" content={content.title} />
     <meta name="og:description" content={content.description} />
     <meta name="og:type" content="website" />
-    <meta name="og:image" content={baseUrl + "icon.svg"} />
+    <meta name="og:image" content={baseUrl + "icon.png"} />
     <style define:vars={{ "base-url": `"${baseUrl.slice(0, -1)}"` }} />
   </head>
   <body
