--- a/src/layout/wiki.astro
+++ b/src/layout/wiki.astro
@@ -9,7 +9,7 @@ const { content } = Astro.props;
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image/svg+xml" href={baseUrl + "/favicon.svg"} />
+    <link rel="icon" type="image/svg+xml" href={baseUrl + "favicon.svg"} />
     <title>{content.title}</title>
     <meta name="description" content={content.description} />
     <meta name="generator" content={Astro.generator} />
@@ -17,7 +17,7 @@ const { content } = Astro.props;
     <meta name="og:title" content={content.title} />
     <meta name="og:description" content={content.description} />
     <meta name="og:type" content="website" />
-    <meta name="og:image" content={baseUrl + "/icon.png"} />
+    <meta name="og:image" content={baseUrl + "icon.png"} />
     <style define:vars={{ "base-url": `"${baseUrl}/"` }} />
   </head>
   <body
@@ -25,7 +25,9 @@ const { content } = Astro.props;
   >
     <slot name="header" />
     <div class="relative flex">
-      <Sidebar />
+      <div class="sticky top-0 h-screen">
+        <Sidebar />
+      </div>
       <main class="flex-1 lg:ml-0 min-w-0 ">
         <slot />
       </main>
