--- a/src/components/Sidebar.astro
+++ b/src/components/Sidebar.astro
@@ -18,16 +18,16 @@ const navigation: NavSection[] = [
     title: "Getting Started",
     items: [
       { label: "Home", href: `${baseUrl}` },
-      { label: "Installation", href: `${baseUrl}getting-started` },
+      { label: "Installation", href: `${baseUrl}/getting-started` },
     ],
   },
   {
     title: "Mobs",
     items: [
-      { label: "Overview", href: `${baseUrl}mobs` },
-      { label: "Deer", href: `${baseUrl}mobs/deer`, isSubItem: true },
-      { label: "Ammonite", href: `${baseUrl}mobs/ammonite`, isSubItem: true },
-      { label: "Doedicurus", href: `${baseUrl}mobs/doedicurus`, isSubItem: true },
+      { label: "Overview", href: `${baseUrl}/mobs` },
+      { label: "Deer", href: `${baseUrl}/mobs/deer`, isSubItem: true },
+      { label: "Ammonite", href: `${baseUrl}/mobs/ammonite`, isSubItem: true },
+      { label: "Doedicurus", href: `${baseUrl}/mobs/doedicurus`, isSubItem: true },
 
     ],
   },
