--- a/src/layout/main.astro
+++ b/src/layout/main.astro
@@ -8,7 +8,7 @@ const { content } = Astro.props;
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image/svg+xml" href={baseUrl + "favicon.svg"} />
+    <link rel="icon" type="image/svg+xml" href={`${baseUrl}/favicon.svg`} />
     <title>{content.title}</title>
     <meta name="description" content={content.description} />
     <meta name="generator" content={Astro.generator} />
@@ -16,7 +16,7 @@ const { content } = Astro.props;
     <meta name="og:title" content={content.title} />
     <meta name="og:description" content={content.description} />
     <meta name="og:type" content="website" />
-    <meta name="og:image" content={baseUrl + "icon.png"} />
+    <meta name="og:image" content={`${baseUrl}/icon.png`} />
     <style define:vars={{ "base-url": `"${baseUrl}/"` }} />
   </head>
   <body
