--- a/src/pages/mobs/index.astro
+++ b/src/pages/mobs/index.astro
@@ -46,8 +46,8 @@ const baseUrl = import.meta.env.BASE_URL;
               <div>
                 <h4 class="text-lg font-semibold">Passive mobs</h4>
                 <ul class="list-inside list-disc space-y-1 pl-4">
-                  <li><a href={`${baseUrl}/mobs/ammonite`} class="underline">Ammonite <sup>[+]</sup></a></li>
-                  <li><a href={`${baseUrl}/mobs/doedicurus`} class="underline">Doedicurus <sup>[+]</sup></a></li>
+                  <li><a href={`${baseUrl}mobs/ammonite`} class="underline">Ammonite <sup>[+]</sup></a></li>
+                  <li><a href={`${baseUrl}mobs/doedicurus`} class="underline">Doedicurus <sup>[+]</sup></a></li>
                   <li>Silkmoth</li>
                   <li>Silkworm</li>
                 </ul>
@@ -55,7 +55,7 @@ const baseUrl = import.meta.env.BASE_URL;
               <div>
                 <h4 class="text-lg font-semibold">Neutral mobs</h4>
                 <ul class="list-inside list-disc space-y-1 pl-4">
-                  <li><a href={`${baseUrl}/mobs/deer`} class="underline">Deer <sup>[+]</sup></a></li>
+                  <li><a href={`${baseUrl}mobs/deer`} class="underline">Deer <sup>[+]</sup></a></li>
                   <li>Direwolf</li>
                   <li>Parasaurolophus</li>
                 </ul>
